After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 704553 - (dyn|multi)udpsink: broken on !IPv6 systems
(dyn|multi)udpsink: broken on !IPv6 systems
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.0.8
Other Linux
: Normal normal
: 1.0.9
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-19 13:55 UTC by Peter Korsgaard
Modified: 2013-07-19 14:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch to fix issue (1.96 KB, patch)
2013-07-19 13:55 UTC, Peter Korsgaard
committed Details | Review

Description Peter Korsgaard 2013-07-19 13:55:15 UTC
Created attachment 249634 [details] [review]
patch to fix issue

The g_socket functions only touch the error argument on errors, so clear
err back to NULL in case g_socket_new (G_SOCKET_FAMILY_IPV6) failed, as
we check for err != NULL later on to know if g_socket_bind() failed,
otherwise we errously fail on systems without IPv6 support.
Comment 1 Sebastian Dröge (slomo) 2013-07-19 14:24:09 UTC
commit 118876702467d6063e9c9745b7d093682ad16472
Author: Peter Korsgaard <jacmet@sunsite.dk>
Date:   Fri Jul 19 15:24:08 2013 +0200

    (dyn|multi)udpsink: unbreak on !IPv6 systems after 130268bc (Bind socket before using it)
    
    The g_socket functions only touch the error argument on errors, so clear
    err back to NULL in case g_socket_new (G_SOCKET_FAMILY_IPV6) failed, as
    we check for err != NULL later on to know if g_socket_bind() failed,
    otherwise we errously fail on systems without IPv6 support.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=704553