(dyn|multi)udpsink: unbreak on !IPv6 systems after 130268bc (Bind socket before using it)

The g_socket functions only touch the error argument on errors, so clear
err back to NULL in case g_socket_new (G_SOCKET_FAMILY_IPV6) failed, as
we check for err != NULL later on to know if g_socket_bind() failed,
otherwise we errously fail on systems without IPv6 support.

https://bugzilla.gnome.org/show_bug.cgi?id=704553